Update card text colors to lighter grey for improved readability

--- a/index.html
+++ b/index.html
@@ -4,12 +4,99 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>LiveLab 4 Demo</title>
+  <title>Lotus Trail</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello world
+  <!-- Navigation bar with site name and links -->
+  <nav>
+    <span class="nav-site-title">Lotus Trail</span>
+    <div class="nav-links">
+      <a href="#">Home</a>
+      <a href="#">Destinations</a>
+      <a href="#">Contact</a>
+    </div>
+  </nav>
+
+  <!-- Site introduction in a bubble -->
+  <section class="intro-section">
+    <div class="intro-bubble">
+      <h2 class="intro-headline">Experience Travel with Purpose and Passion</h2>
+      <p class="intro-text">
+        Discover new places, make memories, and travel with meaning. Join us on a journey to explore the world!
+      </p>
+    </div>
+  </section>
+
+  <!-- Eco-friendly destinations section -->
+  <section class="destinations-section">
+    <h2>Explore Our Eco-Friendly Destinations</h2>
+    <div class="cards-container">
+      <!-- Destination 1 card -->
+      <div class="destination-card">
+        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80"
+          alt="Costa Rica rainforest" class="destination-image">
+        <div class="destination-content">
+          <h3>Costa Rica</h3>
+          <p>
+            Discover Costa Rica’s vibrant rainforests, home to exotic wildlife and breathtaking waterfalls.
+          </p>
+          <ul class="destination-list">
+            <li>See colorful birds, monkeys, and sloths in their natural habitat.</li>
+            <li>Relax at eco-lodges surrounded by lush greenery.</li>
+            <li>Enjoy adventures like ziplining, hiking, and river rafting.</li>
+            <li>Support local conservation and sustainable tourism.</li>
+          </ul>
+        </div>
+      </div>
+      <!-- Destination 2 card -->
+      <div class="destination-card">
+        <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80"
+          alt="New Zealand landscape" class="destination-image">
+        <div class="destination-content">
+          <h3>New Zealand</h3>
+          <p>
+            Experience New Zealand’s stunning mountains, crystal-clear lakes, and lush valleys.
+          </p>
+          <ul class="destination-list">
+            <li>Explore beautiful national parks and hiking trails.</li>
+            <li>See unique wildlife like kiwis and dolphins.</li>
+            <li>Enjoy eco-tours and learn about Maori culture.</li>
+            <li>Travel responsibly in a country committed to sustainability.</li>
+          </ul>
+        </div>
+      </div>
+      <!-- Destination 3 card -->
+      <div class="destination-card">
+        <img src="https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?auto=format&fit=crop&w=400&q=80"
+          alt="Norway fjord" class="destination-image">
+        <div class="destination-content">
+          <h3>Norway</h3>
+          <p>
+            Journey through Norway’s majestic fjords and scenic landscapes.
+          </p>
+          <ul class="destination-list">
+            <li>See breathtaking fjords and northern lights.</li>
+            <li>Travel by eco-friendly trains and boats.</li>
+            <li>Enjoy hiking, biking, and outdoor adventures.</li>
+            <li>Discover Norway’s leadership in green living and tourism.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Call-to-action message and button -->
+    <div class="cta-section">
+      <div class="cta-bubble">
+        <p>Ready to start your eco-friendly adventure?</p>
+      </div>
+      <div class="cta-button-bubble">
+        <a href="#" class="cta-button">Plan Your Trip</a>
+      </div>
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 
